// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthereumSig should create propose envelope 1`] = `
{
  "data": {
    "authenticator": "0xc537d997ddc783e071f82ccbfaa0d768d310001b",
    "executionStrategy": {
      "addy": "0x6241b5c89350bb3c465179706cf26050ea32444f",
      "params": "0x00",
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
    "strategies": [
      {
        "address": "0xeba53160c146cbf77a150e9a218d4c2de5db6b51",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 5,
      "name": "snapshot-x",
      "verifyingContract": "0xc537d997ddc783e071f82ccbfaa0d768d310001b",
      "version": "0.1.0",
    },
    "message": {
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "addy": "0x6241b5c89350bb3c465179706cf26050ea32444f",
        "params": "0x00",
      },
      "metadataURI": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
      "salt": 0,
      "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
      "userParams": "0x0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000100000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000",
    },
    "signature": "0xb6b8350e2abf8e66b7dd59533ea862788b0bfa63bec8d00e3f3ddf3a4009fcba49e08a6220dc2a6588fa0116fc28970d75b0d56ce7c3d5bf0925b2cde30dd7211b",
    "types": {
      "Propose": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "author",
          "type": "address",
        },
        {
          "name": "metadataURI",
          "type": "string",
        },
        {
          "name": "executionStrategy",
          "type": "Strategy",
        },
        {
          "name": "userParams",
          "type": "bytes",
        },
        {
          "name": "salt",
          "type": "uint256",
        },
      ],
      "Strategy": [
        {
          "name": "addy",
          "type": "address",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig should create update proposal envelope 1`] = `
{
  "data": {
    "authenticator": "0xc537d997ddc783e071f82ccbfaa0d768d310001b",
    "executionStrategy": {
      "addy": "0x6241b5c89350bb3c465179706cf26050ea32444f",
      "params": "0x00",
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "proposal": 1,
    "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 5,
      "name": "snapshot-x",
      "verifyingContract": "0xc537d997ddc783e071f82ccbfaa0d768d310001b",
      "version": "0.1.0",
    },
    "message": {
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "addy": "0x6241b5c89350bb3c465179706cf26050ea32444f",
        "params": "0x00",
      },
      "metadataURI": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
      "proposalId": 1,
      "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
    },
    "signature": "0xe6cc864b565eec4ca1e451e6959cc7578827d596936bb2fc9e5a28fec332abe668fba42db5ffc58446fc814f517279d5ea0686892c396412fcbc8492fe5dfaaa1b",
    "types": {
      "Strategy": [
        {
          "name": "addy",
          "type": "address",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "updateProposal": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "author",
          "type": "address",
        },
        {
          "name": "proposalId",
          "type": "uint256",
        },
        {
          "name": "executionStrategy",
          "type": "Strategy",
        },
        {
          "name": "metadataURI",
          "type": "string",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig should create vote envelope 1`] = `
{
  "data": {
    "authenticator": "0xc537d997ddc783e071f82ccbfaa0d768d310001b",
    "choice": 1,
    "metadataUri": "",
    "proposal": 1,
    "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
    "strategies": [
      {
        "address": "0xeba53160c146cbf77a150e9a218d4c2de5db6b51",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 5,
      "name": "snapshot-x",
      "verifyingContract": "0xc537d997ddc783e071f82ccbfaa0d768d310001b",
      "version": "0.1.0",
    },
    "message": {
      "choice": 1,
      "proposalId": 1,
      "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
      "voteMetadataURI": "",
      "voter": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    },
    "signature": "0x101ad90abe751ad9c9065294486d79b90206d10c568ce4c66aea9e5d01a1b6961ff152c24ae4066baf9e8de5ca3ffead67701087377cbfe44280efe50940dca91c",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Vote": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "voter",
          "type": "address",
        },
        {
          "name": "proposalId",
          "type": "uint256",
        },
        {
          "name": "choice",
          "type": "uint8",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
        {
          "name": "voteMetadataURI",
          "type": "string",
        },
      ],
    },
  },
}
`;
